# lume

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  spec-author.md
.claude/hooks/: rust-check.sh
.claude/skills/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-release-labels.yml  release.yml  security.yml  version-main.yml
.specs/: 000-fase-0-okf.md
brain.example/daily/: 2026-06-28.md
brain.example/facts/: fuso.md
brain.example/goals/: aprender-rust.md
brain.example/notes/: ownership.md
brain.example/people/: ana.md
brain.example/preferences/: cafe.md
brain.example/projects/: lume.md
docs/: ARCH.md  DECISIONS.md  MODELS.md  SECURITY.md  STACK.md
release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
scripts/: check-versions.mjs  prepare-release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  okf.rs
src/components/: Chat.tsx  NoteEditor.tsx  Novidades.tsx  UpdateBanner.tsx
src/lib/: ai.ts  api.ts  okf.ts  releaseNotes.ts  types.ts
(+12 files in other folders)
