[package]
name = "lume"
version = "0.7.0"
description = "Lume — segundo cérebro local com IA (formato OKF)"
authors = ["Yefclub"]
license = "MIT"
repository = "https://github.com/Yefclub/lume"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
walkdir = "2"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
